# cpp_practice

./: .gitignore
audio_practice/: meson.build
audio_practice/src/: main.cpp
error_handling_example/: meson.build
essentia_example/: logmel_44100.json  meson.build  spectrogram.json  spectrum.json  view_spectrogram.py
essentia_example/src/: main.cpp
hello/: main  main.cpp
pingpong/: logs.json  meson.build
pingpong/include/: config_manager.hpp  ping_pong_handler.h  ping_pong_handler.hpp  thread_client_session.h  thread_client_session.hpp
pingpong/src/: main.cpp  ping_pong_handler.cpp  thread_client_session.cpp
project/src/: main.cpp
threads/: main  main.cpp
